--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -2,6 +2,11 @@
 server:
   port: 8080
 spring:
+  redis:
+    host: 192.168.248.128
+    port: 6379
+    database: 0
+    password: 985622
   application:
     name: mmjbxgwm
   datasource:
