--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -3,10 +3,11 @@ server:
   port: 8080
 spring:
   redis:
-    host: 192.168.248.128
+    #host: 192.168.248.128
+    host: localhost
     port: 6379
     database: 0
-    password: 985622
+    #password: 985622
   application:
     name: mmjbxgwm
   datasource:
