--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -23,14 +23,14 @@ spring:
         driver-class-name: com.mysql.cj.jdbc.Driver
         url: jdbc:mysql://192.168.248.128:3306/mmjbxgwm?characterEncoding=utf-8
         username: root
-        password: 985622
+        password: Root@985622
       # 从数据源
       slave:
         type: com.alibaba.druid.pool.DruidDataSource
         driver-class-name: com.mysql.cj.jdbc.Driver
-        url: jdbc:mysql://192.168.248.128:3306/mmjbxgwm?characterEncoding=utf-8
+        url: jdbc:mysql://192.168.248.129:3306/mmjbxgwm?characterEncoding=utf-8
         username: root
-        password: 985622
+        password: Root@985622
     masterslave:
       # 读写分离配置
       load-balance-algorithm-type: round_robin
